--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -1,4 +1,4 @@
-form {
+.desicion-form {
     .container {
         display: flex;
         align-items: center;
